[gd_scene load_steps=46 format=2]

[ext_resource path="res://World1/Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDown0.png" type="Texture" id=2]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDown1.png" type="Texture" id=3]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDown2.png" type="Texture" id=4]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDown3.png" type="Texture" id=5]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDownRight0.png" type="Texture" id=6]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDownRight1.png" type="Texture" id=7]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDownRight2.png" type="Texture" id=8]
[ext_resource path="res://World1/Entities/Player/Sprites/RollDownRight3.png" type="Texture" id=9]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUp0.png" type="Texture" id=10]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUp1.png" type="Texture" id=11]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUp2.png" type="Texture" id=12]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUp3.png" type="Texture" id=13]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUpRight0.png" type="Texture" id=14]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUpRight1.png" type="Texture" id=15]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUpRight2.png" type="Texture" id=16]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUpRight3.png" type="Texture" id=17]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDown0.png" type="Texture" id=18]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDown1.png" type="Texture" id=19]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDown2.png" type="Texture" id=20]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDown3.png" type="Texture" id=21]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUpRight0.png" type="Texture" id=22]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUpRight1.png" type="Texture" id=23]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUpRight2.png" type="Texture" id=24]
[ext_resource path="res://World1/Entities/Player/Sprites/CharUpRight3.png" type="Texture" id=25]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUp0.png" type="Texture" id=26]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUp1.png" type="Texture" id=27]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUp2.png" type="Texture" id=28]
[ext_resource path="res://World1/Entities/Player/Sprites/RollUp3.png" type="Texture" id=29]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDownRight0.png" type="Texture" id=30]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDownRight1.png" type="Texture" id=31]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDownRight2.png" type="Texture" id=32]
[ext_resource path="res://World1/Entities/Player/Sprites/CharDownRight3.png" type="Texture" id=33]
[ext_resource path="res://World1/Entities/Player/Sprites/CharRight0.png" type="Texture" id=34]
[ext_resource path="res://World1/Entities/Player/Sprites/CharRight1.png" type="Texture" id=35]
[ext_resource path="res://World1/Entities/Player/Sprites/CharRight2.png" type="Texture" id=36]
[ext_resource path="res://World1/Entities/Player/Sprites/CharRight3.png" type="Texture" id=37]
[ext_resource path="res://World1/Entities/Player/Sprites/RollRight0.png" type="Texture" id=38]
[ext_resource path="res://World1/Entities/Player/Sprites/RollRight1.png" type="Texture" id=39]
[ext_resource path="res://World1/Entities/Player/Sprites/RollRight2.png" type="Texture" id=40]
[ext_resource path="res://World1/Entities/Player/Sprites/RollRight3.png" type="Texture" id=41]
[ext_resource path="res://World1/Entities/Player/Inventory.gd" type="Script" id=42]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "RollDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "RollDownRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "CharUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "RollUpRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "CharDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "CharUpRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "RollUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "CharDownRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "CharRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "RollRight",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.03362, 7.99893 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 512.544, 297.129 )
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 7 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "CharDown"

[node name="CD" type="Timer" parent="."]
one_shot = true

[node name="Inventory" type="CanvasLayer" parent="."]
editor/display_folded = true
script = ExtResource( 42 )

[node name="ColorRect" type="ColorRect" parent="Inventory"]
visible = false
margin_left = 3.0
margin_top = 220.0
margin_right = 526.0
margin_bottom = 592.0
color = Color( 0, 0, 0, 1 )

[node name="Container" type="Container" parent="Inventory/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.5
margin_top = -138.0
margin_right = 207.5
margin_bottom = 138.0

[node name="Button" type="Button" parent="Inventory/ColorRect/Container"]
margin_right = 100.0
margin_bottom = 70.0

[node name="Button2" type="Button" parent="Inventory/ColorRect/Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 70.0

[node name="Button3" type="Button" parent="Inventory/ColorRect/Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 70.0

[node name="Button4" type="Button" parent="Inventory/ColorRect/Container"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0

[node name="Button5" type="Button" parent="Inventory/ColorRect/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -35.0
margin_right = 50.0
margin_bottom = 35.0

[node name="Button6" type="Button" parent="Inventory/ColorRect/Container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_bottom = 35.0

[node name="Button7" type="Button" parent="Inventory/ColorRect/Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_right = 100.0

[node name="Button8" type="Button" parent="Inventory/ColorRect/Container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -70.0
margin_right = 50.0

[node name="Button9" type="Button" parent="Inventory/ColorRect/Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -70.0

[node name="hitbox" type="Area2D" parent="." groups=[
"playerHitbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="CD" to="." method="_on_CD_timeout"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button" to="Inventory" method="_on_Button_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button2" to="Inventory" method="_on_Button2_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button3" to="Inventory" method="_on_Button3_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button4" to="Inventory" method="_on_Button4_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button5" to="Inventory" method="_on_Button5_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button6" to="Inventory" method="_on_Button6_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button7" to="Inventory" method="_on_Button7_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button8" to="Inventory" method="_on_Button8_pressed"]
[connection signal="pressed" from="Inventory/ColorRect/Container/Button9" to="Inventory" method="_on_Button9_pressed"]
